Issue #3219236: layout width issue in responsiveness on mobile/small device

--- a/styles/base/_title.scss
+++ b/styles/base/_title.scss
@@ -43,6 +43,7 @@
 }
 
 .shortcut-action {
+  position: relative;
   align-self: center;
   margin-left: 0;
   border-radius: var(--gin-border-m);
@@ -88,6 +89,9 @@
 
   &__message {
     position: absolute;
+    top: calc(100% + var(--gin-spacing-xs));
+    right: 0;
+    min-width: 120px;
     pointer-events: none;
     padding: var(--gin-spacing-xs);
     margin-top: calc(var(--gin-spacing-xxs) * -1);
